--- a/src/main/resources/assets/tictooltips/lang/zh_CN.lang
+++ b/src/main/resources/assets/tictooltips/lang/zh_CN.lang
@@ -14,12 +14,30 @@ tictooltips.pattern.valid.materials=有效材料:
 # tool tooltips
 tictooltips.tool.repair.material=修理材料: 
 tictooltips.tool.effective.durability=有效 %s
+# uses: material.cactus.ability/material.stone.ability
 tictooltips.tool.shoddiness.modifier=%s 升级槽: 
+# uncomment these if your language needs different syntax for jagged/stonebound 
+#tictooltips.tool.jagged.modifier=Jagged Modifier: 
+#tictooltips.tool.stonebound.modifier=Stonebound Modifier: 
 tictooltips.tool.burn.duration=燃烧持续时间: 
 tictooltips.tool.bonus.vs.undead=%s vs 不死生物: 
 tictooltips.tool.bonus.vs.spiders=%s vs 蜘蛛: 
 tictooltips.tool.chance.to.behead=斩首几率: 
-tictooltips.tool.modifiers=升级槽:
+tictooltips.tool.modifiers=升级槽: 
+tictooltips.tool.knockback=击退: 
+tictooltips.tool.basedamage=基础攻击: 
+tictooltips.tool.sprint.damage=冲刺伤害: 
+tictooltips.tool.crit.damage=暴击伤害加成: 
+# uses: material.cactus.ability/material.stone.ability, gui.toolstation4/gui.toolstation5
+tictooltips.tool.stonebound.loss=%s %s
+tictooltips.tool.stonebound.bonus=%s %s
+tictooltips.tool.jagged.loss=%s %s
+tictooltips.tool.jagged.bonus=%s %s
+# uses: tictooltips.maximum, material.cactus.ability/material.stone.ability, gui.toolstation4/gui.toolstation5
+tictooltips.tool.max.stonebound.loss=%s %s %s
+tictooltips.tool.max.stonebound.bonus=%s %s %s
+tictooltips.tool.max.jagged.loss=%s %s %s
+tictooltips.tool.max.jagged.bonus=%s %s %s
 
 # generic
 tictooltips.minimum=最小
@@ -49,22 +67,22 @@ tictooltips.mining.level.7=7
 tictooltips.mining.level.8=8
 tictooltips.durability=耐久: 
 tictooltips.attack=攻击: 
-tictooltips.bonus=额外: 
+tictooltips.bonus=加成: 
 tictooltips.loss=损耗: 
 tictooltips.draw.speed=拉弓速度: 
 tictooltips.arrow.speed=箭速: 
 tictooltips.weight=重量: 
 tictooltips.accuracy=精准度: 
-tictooltips.base.attack=基础攻击:
-tictooltips.shortbow.attack=短工攻击:
+tictooltips.base.attack=基础攻击: 
+tictooltips.shortbow.attack=短弓攻击: 
 tictooltips.mining.speeds=挖掘速度: 
-tictooltips.harvest.levels=收获等级:
+tictooltips.harvest.levels=收获等级: 
 tictooltips.mining.speed=挖掘速度: 
 tictooltips.mining.level=挖掘等级: 
 tictooltips.usage.speed=使用速度: 
 tictooltips.modifiers=升级槽
 tictooltips.modifiers.remaining=剩余升级槽:
-tictooltips.unbreakable=不破
+tictooltips.unbreakable=不毁
 tictooltips.reinforced=坚固
 tictooltips.jagged=锯齿
 tictooltips.stonebound=石缚
