--- a/src/main/resources/assets/tictooltips/lang/zh_CN.lang
+++ b/src/main/resources/assets/tictooltips/lang/zh_CN.lang
@@ -7,6 +7,7 @@ tictooltips.hold.key.for.more=按住 %s 查看更多
 # material tooltips
 tictooltips.material.shoddiness.modifier= [升级槽: %s]
 tictooltips.material.arrow.weight=箭重: 
+tictooltips.material.durability.modifier=耐久升级槽：
 
 # pattern tooltips
 tictooltips.pattern.valid.materials=有效材料:
